fix section overlaping and too small images

--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,8 @@ section {
       padding-bottom: 50rem; } }
   @media (max-width: 37.5em) {
     .about-section {
-      padding-bottom: 35rem; } }
+      padding-top: 45rem;
+      padding-bottom: 40rem; } }
 
 .features-section {
   padding: 12rem 3rem;
@@ -193,7 +194,7 @@ section {
     height: 3rem; }
   @media (max-width: 37.5em) {
     .header {
-      height: 65vh;
+      height: 45vh;
       clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%); } }
 
 .footer {
@@ -402,6 +403,9 @@ section {
   left: 50%;
   top: 40%;
   transform: translate(-50%, -50%); }
+  @media (max-width: 37.5em) {
+    .text-container {
+      top: 50%; } }
   .text-container__title-main {
     display: block;
     letter-spacing: 3.5rem;
@@ -443,8 +447,8 @@ section {
           left: 7rem; } }
       @media (max-width: 37.5em) {
         .composition__photo--photo1 {
-          top: 3rem;
-          left: 5.4rem; } }
+          top: 4rem;
+          left: -0.6rem; } }
     .composition__photo--photo2 {
       right: 0;
       top: 3rem; }
@@ -454,8 +458,8 @@ section {
           right: 7rem; } }
       @media (max-width: 37.5em) {
         .composition__photo--photo2 {
-          top: 3rem;
-          right: 5.4rem; } }
+          top: 4rem;
+          right: -0.6rem; } }
     .composition__photo--photo3 {
       top: 13rem;
       left: 20%; }
@@ -472,7 +476,7 @@ section {
       box-shadow: 0 1rem 3rem 1rem rgba(0, 0, 0, 0.9); }
     @media (max-width: 62.25em) {
       .composition__photo {
-        width: 30%; }
+        width: 50%; }
         .composition__photo--photo3:hover {
           transform: scale(1.1) translateX(-50%); } }
   .composition:hover .composition__photo:not(:hover) {
