--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -19,8 +19,8 @@
                 left: 7rem;
             }
             @include respond(phone){
-                top: 3rem;
-                left: 5.4rem;
+                top: 4rem;
+                left: -0.6rem;
             }
         }  
         &--photo2{
@@ -31,8 +31,8 @@
                 right: 7rem;
             }
             @include respond(phone){
-                top: 3rem;
-                right: 5.4rem;
+                top: 4rem;
+                right: -0.6rem;
             }
         }
         &--photo3{
@@ -53,7 +53,7 @@
             box-shadow: $shadow-dark;
         }
         @include respond(tab-port){
-            width: 30%;
+            width: 50%;
             &--photo3:hover{
                 transform: scale(1.1) translateX(-50%);
             } 
