--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -19,8 +19,8 @@
     }
     @include respond(phone)
     {
-        height: 65vh;
+        height: 45vh;
         clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
     }
 
-}
+} 
